--- a/front-end/homepage.html
+++ b/front-end/homepage.html
@@ -8,7 +8,7 @@
     <title>Restaurant Finder</title>
 </head>
 <body>
-    <h1 class="title">Restaurant Finder</h1>
+    <head><h1 class="title">Restaurant Finder</h1></head>
     <h2>Having trouble figuring out where to eat?</h2>
     <p>We have the solution to your problem!</p>
     <aside> 
