added the get resturant function and make a clear table function

--- a/front-end/homepage.html
+++ b/front-end/homepage.html
@@ -8,7 +8,9 @@
     <title>Restaurant Finder</title>
 </head>
 <body>
-    <head><h1 class="title">Restaurant Finder</h1></head>
+    <header><h1 class="title">Restaurant Finder</h1>
+    <nav><a href=""></a></nav>
+    </header>
     <h2>Having trouble figuring out where to eat?</h2>
     <p>We have the solution to your problem!</p>
     <aside> 
