--- a/front-end/homepage.html
+++ b/front-end/homepage.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css">
-    <title>Restaurant Finder</title>
+    <title>Restaurant Selector</title>
 </head>
 <body>
-    <header><h1 class="title">Restaurant Finder</h1>
+    <header><h1 class="title">Restaurant Selector</h1>
     <nav><a href=""></a></nav>
     </header>
     <h2>Having trouble figuring out where to eat?</h2>
-    <p>We have the solution to your problem!</p>
+    <p class="got-it">We have the solution to your problem!</p>
+    <p class="inst">Instructions:</p>
+    <p>In the box below add one restaurnant at a time. Then select it's type and give it a rating. Click 'Add Restaurnant' to add it to the list of places you want to go. When you're finished with adding where you want to eat click the 'Get Restaurant' button to be told where you have to go.</p>
     <aside> 
         <h3>Add Your Restaurants</h3>
         
