added a catch and did css and html stuff

--- a/front-end/homepage.html
+++ b/front-end/homepage.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header><h1 class="title">Restaurant Selector</h1>
-    <nav><a href=""></a></nav>
+        <nav><a href="/html">Our Choices</a></nav>
     </header>
     <h2>Having trouble figuring out where to eat?</h2>
     <p class="got-it">We have the solution to your problem!</p>
