--- a/front-end/homepage.html
+++ b/front-end/homepage.html
@@ -8,7 +8,9 @@
     <title>Restaurant Selector</title>
 </head>
 <body>
-    <header><h1 class="title">Restaurant Selector</h1>
+    <header>
+        <h1 class="title">Restaurant Selector</h1>
+        <img src="/logo2" alt="">
         <nav><a href="/html">Our Choices</a></nav>
     </header>
     <h2>Having trouble figuring out where to eat?</h2>
