added more css and made choices pages

--- a/front-end/ourChoices.html
+++ b/front-end/ourChoices.html
@@ -8,10 +8,11 @@
     <title>Our Choices</title>
 </head>
 <body>
-    <button id="fast-btn">Our Fast Food</button>
-    <button id="sit-btn">Our Sit Down</button>
-    <button id="Fancy Foods">Fancy Food</button>
-    
+    <div>
+        <button id="fast-btn">Our Fast Food</button>
+        <button id="sit-btn">Our Sit Down</button>
+        <button id="Fancy-Foods">Fancy Food</button>
+    </div>
 
 
 
