did more css and html to second page

--- a/front-end/ourChoices.html
+++ b/front-end/ourChoices.html
@@ -8,11 +8,13 @@
     <title>Our Choices</title>
 </head>
 <body>
-    <div>
+    <div id="button-section">
         <button id="fast-btn">Our Fast Food</button>
         <button id="sit-btn">Our Sit Down</button>
         <button id="Fancy-Foods">Fancy Food</button>
     </div>
+
+    <div id="back"><a href="/">Back</a></div>
 
 
 
