added functions on our choices and added more html and css

--- a/front-end/homepage.html
+++ b/front-end/homepage.html
@@ -17,6 +17,8 @@
     <p class="got-it">We have the solution to your problem!</p>
     <p class="inst">Instructions:</p>
     <p>In the box below add one restaurnant at a time. Then select it's type and give it a rating. Click 'Add Restaurnant' to add it to the list of places you want to go. When you're finished with adding where you want to eat click the 'Get Restaurant' button to be told where you have to go.</p>
+    <p class="inst">Or:</p>
+    <p>Go to the "Our Choices" page to get some of the top fast food and sit down restaurants in the country.</p>
     <aside> 
         <h3>Add Your Restaurants</h3>
         
