--- a/front-end/ourChoices.html
+++ b/front-end/ourChoices.html
@@ -11,10 +11,12 @@
     <div id="button-section">
         <button id="fast-btn">Our Fast Food</button>
         <button id="sit-btn">Our Sit Down</button>
-        <button id="Fancy-Foods">Fancy Food</button>
+        <button id="fancy-foods">Fancy Food</button>
     </div>
 
-    <div id="back"><a href="/">Back</a></div>
+    <p id="get-restaurant"></p>
+
+    <div id="home"><a href="/">Return Home</a></div>
 
 
 
