did css to buttons and moved stuff around

--- a/front-end/homepage.html
+++ b/front-end/homepage.html
@@ -15,10 +15,10 @@
     </header>
     <h2>Having trouble figuring out where to eat?</h2>
     <p class="got-it">We have the solution to your problem!</p>
-    <p class="inst">Instructions:</p>
-    <p>In the box below add one restaurnant at a time. Then select it's type and give it a rating. Click 'Add Restaurnant' to add it to the list of places you want to go. When you're finished with adding where you want to eat click the 'Get Restaurant' button to be told where you have to go.</p>
-    <p class="inst">Or:</p>
-    <p>Go to the "Our Choices" page to get some of the top fast food and sit down restaurants in the country.</p>
+    <!-- <div class="popup" onclick="myPopup()">Instructions!
+        <span class="popuptext" id="myPopup"></span>
+      </div> -->
+    <br>
     <aside> 
         <h3>Add Your Restaurants</h3>
         
@@ -29,7 +29,7 @@
             <div><label for="type">Type:</label></div>
             <select id="type"></select>
 
-            <h4>Rating</h4>
+            <h4>Rating:</h4>
             <div class="radio">
                 <label for="rating-one">1:</label>
                 <input type="radio" name="rating" value="1"
@@ -66,7 +66,12 @@
    <button id="get-btn">Get Restaurant</button>
 
    <p id="get-restaurant"></p>
-    
+   <br>
+   
+    <p class="inst">Instructions:</p>
+    <p>In the box below add one restaurnant at a time. Then select it's type and give it a rating. Click 'Add Restaurnant' to add it to the list of places you want to go. When you're finished with adding where you want to eat click the 'Get Restaurant' button to find out where you're eating!</p>
+    <p class="inst">Or:</p>
+    <p>Go to the "Our Choices" page to get some of the top fast food and sit down restaurants in the country.</p> 
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="/js"></script>
