--- a/front-end/ourChoices.html
+++ b/front-end/ourChoices.html
@@ -14,9 +14,11 @@
         <button id="fancy-foods">Fancy Food</button>
     </div>
 
-    <p id="get-restaurant"></p>
+    <div id="get-restaurant" class="modal">
+        <div class="modal-content"></div>
+    </div>
 
-    <div id="home"><a href="/">Return Home</a></div>
+    <div id="home"><a id="home" href="/">Return Home</a></div>
 
 
 
